--- a/GITJAM/GITJAM/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GITJAM/GITJAM/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,7 +89,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/Template_Default
+LastLevel=/Game/Maps/main
 
 [DetailCategories]
 WorldSettings.World=True
@@ -236,7 +236,7 @@ RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBas
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1330.000 Y=770.000
+WindowSize=X=1340.000 Y=780.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -263,7 +263,7 @@ GenericOpen=C:/Users/CORVO/Downloads/GITJAM/GITJAM/Content/
 GenericSave=C:/Users/CORVO/Downloads/GITJAM/GITJAM/Content/
 MeshImportExport=C:/Users/CORVO/Downloads/GITJAM/GITJAM/Content/
 WorldRoot=C:/Users/CORVO/Downloads/GITJAM/GITJAM/Content/
-Level=C:/Users/CORVO/Downloads/GITJAM/GITJAM/Content/
+Level=../../../../../GITJAM/gitThrowbackJam/GITJAM/GITJAM/Content/Maps
 Project=E:/UNREAL ENGINE/UE_4.15/
 
 [ModuleFileTracking]
