--- a/GITJAM/GITJAM/Config/DefaultInput.ini
+++ b/GITJAM/GITJAM/Config/DefaultInput.ini
@@ -54,15 +54,15 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
-+AxisMappings=(AxisName="TurnRate",Key=Gamepad_RightX,Scale=1.000000)
-+AxisMappings=(AxisName="TurnRate",Key=Left,Scale=-1.000000)
-+AxisMappings=(AxisName="TurnRate",Key=Right,Scale=1.000000)
 +AxisMappings=(AxisName="Turn",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="LookUpRate",Key=Gamepad_RightY,Scale=1.000000)
-+AxisMappings=(AxisName="LookUp",Key=MouseY,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=MotionController_Left_Thumbstick_Y,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=MotionController_Left_Thumbstick_X,Scale=1.000000)
 +AxisMappings=(AxisName="jump",Key=SpaceBar,Scale=1.000000)
++AxisMappings=(AxisName="Turn",Key=None,Scale=1.000000)
++AxisMappings=(AxisName="lookUp",Key=MouseY,Scale=-1.000000)
++AxisMappings=(AxisName="turnRate",Key=Gamepad_RightX,Scale=1.000000)
++AxisMappings=(AxisName="lookUp",Key=None,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
