Added some UI for the main menu and also got code from the other duplicate of this project and delted it

--- a/GITJAM/GITJAM/throwback/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GITJAM/GITJAM/throwback/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -123,7 +123,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/throwbackStuff
+ContentBrowserTab1.SelectedPaths=/Game/throwbackStuff/UI/MainMenu
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -153,26 +153,26 @@ LastLevel=/Game/throwbackStuff/Maps/mainMenu
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/throwbackStuff/throwbackGameInstance.throwbackGameInstance
-OpenAssetsAtExit=/Game/throwbackStuff/Maps/mainMenu.mainMenu:PersistentLevel.mainMenu
 
 [ContentBrowserRecent]
-MRUItem0=/Game/throwbackStuff/throwbackGameInstance
-MRUItem1=/Game/throwbackStuff/UI/serverSelect
-MRUItem2=/Game/throwbackStuff/Maps/Arena01
-MRUItem3=/Game/throwbackStuff/UI/hostOrJoin
-MRUItem4=/Game/throwbackStuff/UI/mainMenu
-MRUItem5=/Game/throwbackStuff/UI/NewBlueprint
-MRUItem6=/Game/throwbackStuff/UI/chatText
-MRUItem7=/Game/throwbackStuff/Blueprints/throwingSphere
-MRUItem8=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem9=/Game/NewActorComponent
-MRUItem10=/Game/throwbackStuff/throwingSphere
-MRUItem11=/Game/EditorCube8_Blueprint
-MRUItem12=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem13=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile
-MRUItem14=/Game/throwbackStuff/throwbackCollider_Blueprint
-MRUItem15=/Game/throwbackStuff/throwbackBall_Blueprint
+MRUItem0=/Game/throwbackStuff/UI/MainMenu/hostMenu
+MRUItem1=/Game/throwbackStuff/throwbackGameInstance
+MRUItem2=/Game/throwbackStuff/UI/mainMenu
+MRUItem3=/Game/throwbackStuff/UI/MainMenu/serverMenu
+MRUItem4=/Game/throwbackStuff/UI/serverSelect
+MRUItem5=/Game/throwbackStuff/Maps/Arena01
+MRUItem6=/Game/throwbackStuff/UI/hostOrJoin
+MRUItem7=/Game/throwbackStuff/UI/NewBlueprint
+MRUItem8=/Game/throwbackStuff/UI/chatText
+MRUItem9=/Game/throwbackStuff/Blueprints/throwingSphere
+MRUItem10=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem11=/Game/NewActorComponent
+MRUItem12=/Game/throwbackStuff/throwingSphere
+MRUItem13=/Game/EditorCube8_Blueprint
+MRUItem14=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem15=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile
+MRUItem16=/Game/throwbackStuff/throwbackCollider_Blueprint
+MRUItem17=/Game/throwbackStuff/throwbackBall_Blueprint
 
 [DetailCategories]
 FirstPersonProjectile_C.Tick=True
@@ -1256,6 +1256,8 @@ mainMenu_C.Tick=True
 mainMenu_C.Replication=True
 mainMenu_C.Actor=True
 mainMenu_C.Input=True
+throwbackGameInstance_C.Widget=True
+throwbackGameInstance_C.ServerSettings=True
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1266,7 +1268,7 @@ RecentlyPlaced=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile.FirstPersonP
 [RootWindow]
 ScreenPosition=X=449.000 Y=71.000
 WindowSize=X=1280.000 Y=888.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2086,6 +2088,8 @@ K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.InputArgument0,
 /Game/throwbackStuff/Blueprints/throwingSphere.throwingSphere=1
 /Game/throwbackStuff/UI/mainMenu.mainMenu=1
 /Game/throwbackStuff/UI/serverSelect.serverSelect=1
+/Game/throwbackStuff/UI/MainMenu/hostMenu.hostMenu=1
+/Game/throwbackStuff/UI/MainMenu/serverMenu.serverMenu=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
