--- a/GITJAM/GITJAM/throwback/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GITJAM/GITJAM/throwback/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,27 +152,32 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/throwbackStuff/Maps/mainMenu
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/throwbackStuff/UI/hostMenu.hostMenu
+OpenAssetsAtExit=/Game/throwbackStuff/UI/mainMenu.mainMenu
+OpenAssetsAtExit=/Game/throwbackStuff/throwbackGameInstance.throwbackGameInstance
 
 [ContentBrowserRecent]
-MRUItem0=/Game/throwbackStuff/UI/MainMenu/hostMenu
-MRUItem1=/Game/throwbackStuff/throwbackGameInstance
-MRUItem2=/Game/throwbackStuff/UI/mainMenu
-MRUItem3=/Game/throwbackStuff/UI/MainMenu/serverMenu
-MRUItem4=/Game/throwbackStuff/UI/serverSelect
-MRUItem5=/Game/throwbackStuff/Maps/Arena01
-MRUItem6=/Game/throwbackStuff/UI/hostOrJoin
-MRUItem7=/Game/throwbackStuff/UI/NewBlueprint
-MRUItem8=/Game/throwbackStuff/UI/chatText
-MRUItem9=/Game/throwbackStuff/Blueprints/throwingSphere
-MRUItem10=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem11=/Game/NewActorComponent
-MRUItem12=/Game/throwbackStuff/throwingSphere
-MRUItem13=/Game/EditorCube8_Blueprint
-MRUItem14=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem15=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile
-MRUItem16=/Game/throwbackStuff/throwbackCollider_Blueprint
-MRUItem17=/Game/throwbackStuff/throwbackBall_Blueprint
+MRUItem0=/Game/throwbackStuff/throwbackGameInstance
+MRUItem1=/Game/throwbackStuff/Blueprints/gameplayGM
+MRUItem2=/Game/throwbackStuff/saveGameBP
+MRUItem3=/Game/throwbackStuff/UI/hostMenu
+MRUItem4=/Game/throwbackStuff/UI/mainMenu
+MRUItem5=/Game/throwbackStuff/UI/MainMenu/hostMenu
+MRUItem6=/Game/throwbackStuff/UI/MainMenu/serverMenu
+MRUItem7=/Game/throwbackStuff/UI/serverSelect
+MRUItem8=/Game/throwbackStuff/Maps/Arena01
+MRUItem9=/Game/throwbackStuff/UI/hostOrJoin
+MRUItem10=/Game/throwbackStuff/UI/NewBlueprint
+MRUItem11=/Game/throwbackStuff/UI/chatText
+MRUItem12=/Game/throwbackStuff/Blueprints/throwingSphere
+MRUItem13=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem14=/Game/NewActorComponent
+MRUItem15=/Game/throwbackStuff/throwingSphere
+MRUItem16=/Game/EditorCube8_Blueprint
+MRUItem17=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem18=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile
+MRUItem19=/Game/throwbackStuff/throwbackCollider_Blueprint
 
 [DetailCategories]
 FirstPersonProjectile_C.Tick=True
@@ -1258,6 +1263,23 @@ mainMenu_C.Actor=True
 mainMenu_C.Input=True
 throwbackGameInstance_C.Widget=True
 throwbackGameInstance_C.ServerSettings=True
+hostMenu_C.Appearance=True
+hostMenu_C.Input=True
+hostMenu_C.Interaction=True
+hostMenu_C.Performance=True
+hostMenu_C.Layout=True
+hostMenu_C.Behavior=True
+hostMenu_C.Render Transform=True
+hostMenu_C.Accessibility=True
+hostMenu_C.Navigation=True
+hostMenu_C.Designer=True
+hostMenu_C.Clipping=True
+hostMenu_C.Localization=True
+EditableTextBox.Layout=True
+gameplayGM_C.Tick=True
+gameplayGM_C.Classes=True
+gameplayGM_C.Game=True
+gameplayGM_C.GameMode=True
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
@@ -2090,6 +2112,9 @@ K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.InputArgument0,
 /Game/throwbackStuff/UI/serverSelect.serverSelect=1
 /Game/throwbackStuff/UI/MainMenu/hostMenu.hostMenu=1
 /Game/throwbackStuff/UI/MainMenu/serverMenu.serverMenu=1
+/Game/throwbackStuff/UI/hostMenu.hostMenu=1
+/Game/throwbackStuff/saveGameBP.saveGameBP=1
+/Game/throwbackStuff/Blueprints/gameplayGM.gameplayGM=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2141,8 +2166,8 @@ REINST_throwingSphere_C_94="\"Object.Replication.ReplicatedMovement\" "
 REINST_throwingSphere_C_57="\"Object.Replication.ReplicatedMovement\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget=
-Visual=
+Widget="\"Object.Appearance.WidgetStyle.Font\" "
+Visual="\"Object.Appearance.WidgetStyle.Font\" "
 EditableTextBox="\"Object.Appearance.WidgetStyle.Font\" "
 
 [MessageLog]
