--- a/GITJAM/GITJAM/throwback/Saved/Config/Windows/Engine.ini
+++ b/GITJAM/GITJAM/throwback/Saved/Config/Windows/Engine.ini
@@ -34,4 +34,12 @@ JavaPath=(Path="")
 [/Script/LuminPlatformEditor.MagicLeapSDKSettings]
 MLSDKPath=(Path="")
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=True
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=False
+
 
