Redid the game instance

--- a/GITJAM/GITJAM/throwback/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GITJAM/GITJAM/throwback/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -123,7 +123,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/throwbackStuff/UI/MainMenu
+ContentBrowserTab1.SelectedPaths=/Game/throwbackStuff
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -152,10 +152,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/throwbackStuff/Maps/mainMenu
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/throwbackStuff/UI/hostMenu.hostMenu
-OpenAssetsAtExit=/Game/throwbackStuff/UI/mainMenu.mainMenu
-OpenAssetsAtExit=/Game/throwbackStuff/throwbackGameInstance.throwbackGameInstance
+CleanShutdown=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/throwbackStuff/throwbackGameInstance
@@ -1280,6 +1277,9 @@ gameplayGM_C.Tick=True
 gameplayGM_C.Classes=True
 gameplayGM_C.Game=True
 gameplayGM_C.GameMode=True
+K2Node_Tunnel.Graph=True
+K2Node_Tunnel.Inputs=True
+K2Node_Tunnel.Outputs=True
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1288,9 +1288,9 @@ RecentlyPlaced=/Game/throwbackStuff/throwbackBall_Blueprint.throwbackBall_Bluepr
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile.FirstPersonProjectile;
 
 [RootWindow]
-ScreenPosition=X=449.000 Y=71.000
+ScreenPosition=X=632.000 Y=301.000
 WindowSize=X=1280.000 Y=888.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2095,8 +2095,8 @@ WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.Acti
 PhysicsConstraintComponent=PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,
 throwingSphere_C=throwingSphere_C.Physics.ConstraintsGroup,
 K2Node_CustomEvent=K2Node_CustomEvent.Inputs.InputArgument0,
-EdGraph=EdGraph.Inputs.InputArgument1,
-K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.InputArgument0,
+EdGraph=EdGraph.Inputs.InputArgument1,EdGraph.Inputs.InputArgument0,
+K2Node_FunctionEntry=
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonProjectile.FirstPersonProjectile=1
@@ -2115,6 +2115,7 @@ K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.InputArgument0,
 /Game/throwbackStuff/UI/hostMenu.hostMenu=1
 /Game/throwbackStuff/saveGameBP.saveGameBP=1
 /Game/throwbackStuff/Blueprints/gameplayGM.gameplayGM=1
+/Game/throwbackStuff/Maps/mainMenu.mainMenu:PersistentLevel.mainMenu=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2166,8 +2167,8 @@ REINST_throwingSphere_C_94="\"Object.Replication.ReplicatedMovement\" "
 REINST_throwingSphere_C_57="\"Object.Replication.ReplicatedMovement\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget="\"Object.Appearance.WidgetStyle.Font\" "
-Visual="\"Object.Appearance.WidgetStyle.Font\" "
+Widget=
+Visual=
 EditableTextBox="\"Object.Appearance.WidgetStyle.Font\" "
 
 [MessageLog]
