Finished the menu and host menu selections

--- a/GITJAM/GITJAM/throwback/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GITJAM/GITJAM/throwback/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -90,8 +90,9 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
-MultipleInstancePositions=(X=844,Y=66)
+MultipleInstancePositions=(X=457,Y=150)
 MultipleInstancePositions=(X=890,Y=235)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bAllowArcballRotate=True
@@ -156,10 +157,10 @@ CleanShutdown=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/throwbackStuff/throwbackGameInstance
-MRUItem1=/Game/throwbackStuff/Blueprints/gameplayGM
-MRUItem2=/Game/throwbackStuff/saveGameBP
-MRUItem3=/Game/throwbackStuff/UI/hostMenu
-MRUItem4=/Game/throwbackStuff/UI/mainMenu
+MRUItem1=/Game/throwbackStuff/UI/mainMenu
+MRUItem2=/Game/throwbackStuff/UI/hostMenu
+MRUItem3=/Game/throwbackStuff/Blueprints/gameplayGM
+MRUItem4=/Game/throwbackStuff/saveGameBP
 MRUItem5=/Game/throwbackStuff/UI/MainMenu/hostMenu
 MRUItem6=/Game/throwbackStuff/UI/MainMenu/serverMenu
 MRUItem7=/Game/throwbackStuff/UI/serverSelect
@@ -1280,6 +1281,15 @@ gameplayGM_C.GameMode=True
 K2Node_Tunnel.Graph=True
 K2Node_Tunnel.Inputs=True
 K2Node_Tunnel.Outputs=True
+hostMenu_C.Default=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Accessibility=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Clipping=True
+VerticalBox.Navigation=True
+VerticalBox.Localization=True
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1288,7 +1298,7 @@ RecentlyPlaced=/Game/throwbackStuff/throwbackBall_Blueprint.throwbackBall_Bluepr
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile.FirstPersonProjectile;
 
 [RootWindow]
-ScreenPosition=X=632.000 Y=301.000
+ScreenPosition=X=491.000 Y=83.000
 WindowSize=X=1280.000 Y=888.000
 InitiallyMaximized=False
 
@@ -2097,6 +2107,8 @@ throwingSphere_C=throwingSphere_C.Physics.ConstraintsGroup,
 K2Node_CustomEvent=K2Node_CustomEvent.Inputs.InputArgument0,
 EdGraph=EdGraph.Inputs.InputArgument1,EdGraph.Inputs.InputArgument0,
 K2Node_FunctionEntry=
+hostMenu_C=
+ObjectProperty=EdGraph.Inputs.InputArgument1,EdGraph.Inputs.InputArgument0,
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonProjectile.FirstPersonProjectile=1
@@ -2250,5 +2262,8 @@ bCompileDirectorOnEvaluate=False
 TrajectoryPathCap=250
 bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
 
 
