Just worked a little on the server menu

--- a/GITJAM/GITJAM/throwback/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GITJAM/GITJAM/throwback/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -153,16 +153,18 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/throwbackStuff/Maps/mainMenu
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/throwbackStuff/UI/MainMenu/serverMenu.serverMenu
+OpenAssetsAtExit=/Game/throwbackStuff/UI/hostMenu.hostMenu
 
 [ContentBrowserRecent]
-MRUItem0=/Game/throwbackStuff/throwbackGameInstance
-MRUItem1=/Game/throwbackStuff/UI/mainMenu
-MRUItem2=/Game/throwbackStuff/UI/hostMenu
-MRUItem3=/Game/throwbackStuff/Blueprints/gameplayGM
-MRUItem4=/Game/throwbackStuff/saveGameBP
-MRUItem5=/Game/throwbackStuff/UI/MainMenu/hostMenu
-MRUItem6=/Game/throwbackStuff/UI/MainMenu/serverMenu
+MRUItem0=/Game/throwbackStuff/UI/hostMenu
+MRUItem1=/Game/throwbackStuff/UI/MainMenu/serverMenu
+MRUItem2=/Game/throwbackStuff/throwbackGameInstance
+MRUItem3=/Game/throwbackStuff/UI/mainMenu
+MRUItem4=/Game/throwbackStuff/Blueprints/gameplayGM
+MRUItem5=/Game/throwbackStuff/saveGameBP
+MRUItem6=/Game/throwbackStuff/UI/MainMenu/hostMenu
 MRUItem7=/Game/throwbackStuff/UI/serverSelect
 MRUItem8=/Game/throwbackStuff/Maps/Arena01
 MRUItem9=/Game/throwbackStuff/UI/hostOrJoin
@@ -1290,6 +1292,56 @@ VerticalBox.Performance=True
 VerticalBox.Clipping=True
 VerticalBox.Navigation=True
 VerticalBox.Localization=True
+throwbackGameInstance_C.Widgets=True
+throwbackGameInstance_C.Default=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Clipping=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Accessibility=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Performance=True
+HorizontalBox.Clipping=True
+HorizontalBox.Navigation=True
+HorizontalBox.Localization=True
+Widget.Layout=True
+Widget.Accessibility=True
+Widget.Behavior=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+Widget.Localization=True
+CircularThrobber.Layout=True
+CircularThrobber.Appearance=True
+CircularThrobber.Accessibility=True
+CircularThrobber.Behavior=True
+CircularThrobber.Render Transform=True
+CircularThrobber.Performance=True
+CircularThrobber.Clipping=True
+CircularThrobber.Navigation=True
+CircularThrobber.Localization=True
+serverMenu_C.Appearance=True
+serverMenu_C.Input=True
+serverMenu_C.Interaction=True
+serverMenu_C.Performance=True
+serverMenu_C.Layout=True
+serverMenu_C.Behavior=True
+serverMenu_C.Render Transform=True
+serverMenu_C.Accessibility=True
+serverMenu_C.Navigation=True
+serverMenu_C.Designer=True
+serverMenu_C.Clipping=True
+serverMenu_C.Localization=True
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
@@ -2182,6 +2234,9 @@ TextLayoutWidget="\"Object.Appearance.Font\" "
 Widget=
 Visual=
 EditableTextBox="\"Object.Appearance.WidgetStyle.Font\" "
+Border="\"Object.Appearance.BrushColor\" "
+ContentWidget="\"Object.Appearance.BrushColor\" "
+PanelWidget="\"Object.Appearance.BrushColor\" "
 
 [MessageLog]
 LastLogListing=PIE
